--- a/.env.example
+++ b/.env.example
@@ -19,9 +19,9 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=info
 
-DB_CONNECTION=pgsql
+DB_CONNECTION=mysql
 DB_HOST=
-DB_PORT=5432
+DB_PORT=3306
 DB_DATABASE=
 DB_USERNAME=
 DB_PASSWORD=
